--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,9 +14,6 @@
   </section>
   <section class="description-container">
     <img class="img-home" src="../../../assets/imgHome.png" alt="Mulher" />
-    <p class="description">
-      Invista na sua saúde <br />
-      e bem estar
-    </p>
+    <p class="description">Invista na sua saúde e bem estar</p>
   </section>
 </section>
