--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,6 +6,7 @@
         src="../../../assets/spaço7Logo.png"
         alt="Logo do Spaço7"
       />
+      <p>EM TAQUARA/RS</p>
     </div>
 
     <div class="wrap">
