adjustment in the presentation of professionals

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -34,15 +34,51 @@
         lugar de excelência em serviços de bem-estar e cuidados pessoais.
       </p>
     </div>
-    <div>
-      <div>
-        <img src="../../../assets/Morgana.jpg" alt="Morgana" />
+
+    <div class="professional-container">
+      <div class="professional-presentation">
+        <img
+          class="professionals"
+          src="../../../assets/Morgana.jpg"
+          alt="Morgana"
+        />
+        <div>
+          <h3>Morgana</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
+            dolores a, sit deleniti corporis ullam iure mollitia aspernatur.
+          </p>
+        </div>
       </div>
-      <div>
-        <img src="../../../assets/Fran-Oliveira.jpg" alt="Fran Oliveira" />
+
+      <div class="professional-presentation">
+        <img
+          class="professionals"
+          src="../../../assets/Fran-Oliveira.jpg"
+          alt="Fran Oliveira"
+        />
+        <div>
+          <h3>Fran Oliveira</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
+            dolores a, sit deleniti corporis ullam iure mollitia aspernatur.
+          </p>
+        </div>
       </div>
-      <div>
-        <img src="../../../assets/Evelyn-Recepção.jpg" alt="Evelyn" />
+
+      <div class="professional-presentation">
+        <img
+          class="professionals"
+          src="../../../assets/Evelyn-Recepção.jpg"
+          alt="Evelyn"
+        />
+        <div>
+          <h3>Evelyn</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
+            dolores a, sit deleniti corporis ullam iure mollitia aspernatur.
+          </p>
+        </div>
       </div>
     </div>
   </div>
