--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -28,12 +28,37 @@
   margin: 0px 100px 0px 100px;
 }
 
-img {
-  width: 300px;
+.professional-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
-@media (max-width: 850px) {
+.professional-presentation {
+  flex-basis: calc(33.33% - 20px);
+  height: 400px;
+  text-align: center;
+}
+.professional-presentation p {
+  text-align: justify;
+}
+
+.professionals {
+  width: 300px;
+  height: 400px;
+  margin: 50px 15px 0px 15px;
+  border-radius: 10px;
+}
+
+@media (max-width: 500px) {
   .about-summary {
     margin: 0px 20px 0px 20px;
+  }
+  .professionals {
+    width: 200px;
+    height: 266px;
+  }
+  .professional-presentation {
+    flex-basis: auto;
   }
 }
