--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -51,7 +51,10 @@
     display: none;
   }
   .img-logo {
-    margin-top: 90px;
+    margin-top: 50px;
+  }
+  .img-home {
+    width: 250px;
   }
 }
 
