--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -43,7 +43,7 @@
           alt="Morgana"
         />
         <div>
-          <h3>Morgana</h3>
+          <h3>MORGANA</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
             dolores a, sit deleniti corporis ullam iure mollitia aspernatur.
@@ -58,7 +58,7 @@
           alt="Fran Oliveira"
         />
         <div>
-          <h3>Fran Oliveira</h3>
+          <h3>FRAN OLIVEIRA</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
             dolores a, sit deleniti corporis ullam iure mollitia aspernatur.
@@ -73,13 +73,16 @@
           alt="Evelyn"
         />
         <div>
-          <h3>Evelyn</h3>
+          <h3>EVELYN</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
             dolores a, sit deleniti corporis ullam iure mollitia aspernatur.
           </p>
         </div>
       </div>
+    </div>
+    <div class="img-logo">
+      <img src="../../../assets/spaço7Logo.png" alt="Logo do Spaço 7" />
     </div>
   </div>
 </section>
