--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -45,8 +45,12 @@
         <div>
           <h3>MORGANA</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
-            dolores a, sit deleniti corporis ullam iure mollitia aspernatur.
+            Morgana Gonzalez é uma massoterapeuta empreendedora com mais de 10
+            anos de experiência. Ela inaugurou o SPAço 7 em 2022, com uma equipe
+            de profissionais qualificados. Morgana oferece tratamentos
+            personalizados e busca sempre acompanhar as tendências do setor.
+            Agende uma sessão no SPAÇO7 para desfrutar de momentos relaxantes e
+            revitalizantes com essa profissional dedicada.
           </p>
         </div>
       </div>
@@ -58,10 +62,16 @@
           alt="Fran Oliveira"
         />
         <div>
-          <h3>FRAN OLIVEIRA</h3>
+          <h3>FRANCIELE</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
-            dolores a, sit deleniti corporis ullam iure mollitia aspernatur.
+            Franciele Souza de Oliveira é uma profissional especializada em
+            estética e cosmética, com foco em design de sobrancelhas e
+            micropigmentação. Ela oferece uma variedade de serviços, como design
+            de sobrancelhas, design com henna, brown lamination, hidraglos,
+            extensão de cílios, limpeza de pele e micropigmentação de
+            sobrancelhas e lábios. Franciele se dedica a proporcionar resultados
+            personalizados e de alta qualidade, realçando a beleza de seus
+            clientes e aumentando sua autoestima.
           </p>
         </div>
       </div>
@@ -75,8 +85,98 @@
         <div>
           <h3>EVELYN</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
-            dolores a, sit deleniti corporis ullam iure mollitia aspernatur.
+            Evelyn é uma recepcionista dedicada e profissional, responsável por
+            gerenciar chamadas telefônicas, agendar compromissos e garantir um
+            atendimento eficiente aos clientes. Ela desempenha um papel
+            fundamental em garantir que as necessidades dos clientes sejam
+            atendidas de forma suave e eficaz, contribuindo para o bom
+            funcionamento das operações de recepção.
+          </p>
+        </div>
+      </div>
+
+      <div class="professional-presentation">
+        <img
+          class="professionals"
+          src="../../../assets/Carine.jpg"
+          alt="Carine"
+        />
+        <div>
+          <h3>CARINE</h3>
+          <p>
+            Carine Westphal é uma terapeuta naturopata clínica funcional e
+            fitoterapeuta com mais de 20 anos de experiência na área de saúde.
+            Ela utiliza abordagens naturais para tratar uma variedade de
+            doenças, abrangendo diferentes sistemas do corpo. Carine oferece
+            tratamentos como crioterapia, argiloterapia e emplastros. Sua
+            expertise e dedicação garantem cuidados de saúde personalizados e
+            eficazes.
+          </p>
+        </div>
+      </div>
+
+      <div class="professional-presentation">
+        <img
+          class="professionals"
+          src="../../../assets/Carine.jpg"
+          alt="Carine"
+        />
+        <div>
+          <h3>LIANE</h3>
+          <p>
+            Liane Schonardie é uma podóloga especializada em diversos
+            tratamentos para cuidar da saúde dos pés. Com mais de conhecimento e
+            experiência, ela oferece serviços como profilaxia, tratamento de
+            verrugas e onicomicose, coleta para exame micológico, fototerapia,
+            terapia ILIB, tratamento para unha encravada, pelling químico,
+            tratamento para fissuras plantares, órteses corretivas e cuidados
+            para calos e calosidades. Liane dedica-se a proporcionar cuidados
+            personalizados e de qualidade para manter os pés saudáveis e
+            prevenir complicações.
+          </p>
+        </div>
+      </div>
+
+      <div class="professional-presentation">
+        <img
+          class="professionals"
+          src="../../../assets/Carine.jpg"
+          alt="Carine"
+        />
+        <div>
+          <h3>DEISE</h3>
+          <p>
+            Deise Silveira Fontoura é uma profissional especializada em
+            massagem, oferecendo serviços de massagem relaxante, drenagem
+            linfática, massagem estética e massagem terapêutica. Com sua
+            habilidade e conhecimento, ela busca proporcionar bem-estar, alívio
+            do estresse, melhora da circulação, tratamento estético e
+            terapêutico através das técnicas de massagem. Sua dedicação em
+            cuidar dos clientes e oferecer resultados satisfatórios torna-a uma
+            escolha confiável para quem busca relaxamento e cuidados
+            personalizados.
+          </p>
+        </div>
+      </div>
+
+      <div class="professional-presentation">
+        <img
+          class="professionals"
+          src="../../../assets/Carine.jpg"
+          alt="Carine"
+        />
+        <div>
+          <h3>KAISY</h3>
+          <p>
+            Kaisy Leopoldes é uma terapeuta integrativa e especialista em saúde
+            capilar, com mais de 10 anos de experiência como cabeleireira. Ela
+            se especializou em terapia capilar integrativa para tratar as
+            verdadeiras causas dos problemas capilares, e também possui
+            conhecimentos em técnicas como Barras de Access e Constelação
+            Sistêmica Familiar. Kaisy é reconhecida por seus cortes, tratamentos
+            e mechas, e seu foco está em abordar os aspectos emocionais e
+            energéticos relacionados aos problemas capilares, oferecendo
+            tratamentos personalizados e holísticos para seus clientes.
           </p>
         </div>
       </div>
