--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -1,6 +1,6 @@
 .about-container {
   padding-top: 30px;
-  padding-bottom: 100px;
+  padding-bottom: 50px;
   background-color: #439494;
 }
 .about-container div {
@@ -22,7 +22,7 @@
   padding-top: 30px;
 }
 .about-summary {
-  /* text-align: justify; */
+  padding: 30px;
   text-indent: 20px;
   font-size: 20px;
   margin: 0px 100px 0px 100px;
