global responsiveness tuning

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -66,8 +66,8 @@
           <p>
             Franciele Souza de Oliveira é uma profissional especializada em
             estética e cosmética, com foco em design de sobrancelhas e
-            micropigmentação. Ela oferece uma variedade de serviços, como design
-            de sobrancelhas, design com henna, brown lamination, hidraglos,
+            micropigmentação. Ela oferece diversos serviços, como design de
+            sobrancelhas, design com henna, brown lamination, hidraglos,
             extensão de cílios, limpeza de pele e micropigmentação de
             sobrancelhas e lábios. Franciele se dedica a proporcionar resultados
             personalizados e de alta qualidade, realçando a beleza de seus
@@ -124,15 +124,14 @@
         <div>
           <h3>LIANE</h3>
           <p>
-            Liane Schonardie é uma podóloga especializada em diversos
-            tratamentos para cuidar da saúde dos pés. Com mais de conhecimento e
-            experiência, ela oferece serviços como profilaxia, tratamento de
-            verrugas e onicomicose, coleta para exame micológico, fototerapia,
-            terapia ILIB, tratamento para unha encravada, pelling químico,
-            tratamento para fissuras plantares, órteses corretivas e cuidados
-            para calos e calosidades. Liane dedica-se a proporcionar cuidados
-            personalizados e de qualidade para manter os pés saudáveis e
-            prevenir complicações.
+            Liane Schonardie é uma podóloga especializada tratamentos para
+            cuidar da saúde dos pés. Com mais de conhecimento e experiência, ela
+            oferece serviços como profilaxia, tratamento de verrugas e
+            onicomicose, coleta para exame micológico, fototerapia, terapia
+            ILIB, tratamento para unha encravada, pelling químico, tratamento
+            para fissuras plantares, órteses corretivas e cuidados para calos e
+            calosidades. Liane dedica-se a proporcionar cuidados personalizados
+            e de qualidade para manter os pés saudáveis e prevenir complicações.
           </p>
         </div>
       </div>
