--- a/src/app/components/opening-hours/opening-hours.component.html
+++ b/src/app/components/opening-hours/opening-hours.component.html
@@ -12,7 +12,7 @@
       <tr>
         <th>DIAS</th>
         <th>INÍCIO</th>
-        <th>ENCERRAMENTO</th>
+        <th>FIM</th>
       </tr>
 
       <tr>
