--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -24,6 +24,7 @@
 .about-summary {
   padding: 30px;
   text-indent: 20px;
+  text-align: justify;
   font-size: 20px;
   margin: 0px 100px 0px 100px;
 }
@@ -31,24 +32,23 @@
 .professional-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
 }
 
 .professional-presentation {
   flex-basis: calc(33.33% - 20px);
-  height: 400px;
   text-align: center;
 }
+
 .professional-presentation p {
   font-size: 18px;
   text-align: justify;
-  height: 300px;
+  height: 270px;
+  overflow: auto;
 }
 
 .professionals {
   width: 300px;
   height: 400px;
-  margin: 50px 15px 0px 15px;
   border-radius: 10px;
 }
 
@@ -61,20 +61,40 @@
   margin: 30px;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 1530px) {
+  .professional-presentation p {
+    height: 380px;
+  }
+}
+
+@media (max-width: 815px) {
+  .about-container div {
+    width: 96%;
+    height: 96%;
+  }
   .about-summary {
     margin: 0px 20px 0px 20px;
+  }
+  .professional-presentation {
+    flex-basis: auto;
+    padding: 20px;
+  }
+  .professional-presentation p {
+    height: auto;
+  }
+}
+
+@media (max-width: 500px) {
+  .about-summary {
     text-align: justify;
+    font-size: 16px;
   }
   .professionals {
     width: 200px;
     height: 266px;
   }
-  .professional-presentation {
-    flex-basis: auto;
-  }
+
   .professional-presentation p {
     font-size: 16px;
-    height: auto;
   }
 }
