--- a/src/app/components/opening-hours/opening-hours.component.css
+++ b/src/app/components/opening-hours/opening-hours.component.css
@@ -3,12 +3,10 @@
   display: flex;
   justify-content: center;
   color: #0e6150;
-  padding: 30px;
 }
 
 .container-content {
   background-color: #ffffff93;
-  width: auto;
 
   padding: 40px 80px 40px 80px;
   border-radius: 20px;
@@ -54,4 +52,24 @@ tr:nth-child(even) {
 tr:hover:nth-child(1n + 2) {
   background-color: #085f63;
   color: #fff;
+}
+
+@media (max-width: 630px) {
+  .container-content {
+    width: 96%;
+    height: 96%;
+    padding: 0px 0px 30px 0px;
+    margin-bottom: 50px;
+  }
+
+  .container-content div {
+    margin: 10px;
+  }
+  .container-content div img {
+    width: 50px;
+    height: 50px;
+  }
+  h2 {
+    padding: 20px;
+  }
 }
