adjustment in navigation

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,6 +1,6 @@
 <section class="about-container">
   <div>
-    <h2 class="about-title title1">Quem somos?</h2>
+    <h2 class="about-title title1" id="about">Quem somos?</h2>
     <div class="about-summary">
       <main>
         Spaço7 é um estabelecimento que oferece uma variedade de serviços de
