--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -12,11 +12,11 @@
   </div>
 
   <nav class="nav-links">
-    <a href="">Home</a>
-    <a href="">Quem Somos</a>
-    <a href="">Horários</a>
-    <a href="">Serviços</a>
-    <a href="">Ambiente</a>
-    <a href="">Localização</a>
+    <a href="#home">Home</a>
+    <a href="#about">Quem Somos</a>
+    <a href="#opening-hours">Horários</a>
+    <a href="#services">Serviços</a>
+    <a href="#environment">Ambiente</a>
+    <a href="#location">Localização</a>
   </nav>
 </header>
