--- a/src/app/components/opening-hours/opening-hours.component.html
+++ b/src/app/components/opening-hours/opening-hours.component.html
@@ -1,5 +1,5 @@
 <section class="container">
-  <div class="container-content">
+  <div class="container-content" id="opening-hours">
     <div>
       <img src="../../../assets/relogio.png" alt="Icone de relógio" />
       <h2>
