--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<section class="container">
+<section class="container" id="home">
   <section class="main-logo">
     <div class="logo-container">
       <img
