--- a/src/app/components/opening-hours/opening-hours.component.html
+++ b/src/app/components/opening-hours/opening-hours.component.html
@@ -1,11 +1,7 @@
 <section class="container">
   <div class="container-content" id="opening-hours">
     <div>
-      <img src="../../../assets/relogio.png" alt="Icone de relógio" />
-      <h2>
-        HORÁRIO DE <br />
-        ATENDIMENTO
-      </h2>
+      <h2>HORÁRIO DE ATENDIMENTO</h2>
     </div>
 
     <table>
