--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,5 @@
 <app-home></app-home>
 <app-about></app-about>
 <app-opening-hours></app-opening-hours>
+
+<app-whatsapp-conversation></app-whatsapp-conversation>
