--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
 <app-home></app-home>
 <app-about></app-about>
 <app-opening-hours></app-opening-hours>
+<app-presentation-of-services></app-presentation-of-services>
 
 <app-whatsapp-conversation></app-whatsapp-conversation>
