--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
 <app-about></app-about>
 <app-opening-hours></app-opening-hours>
 <app-presentation-of-services></app-presentation-of-services>
+<app-work-space></app-work-space>
 
 <app-whatsapp-conversation></app-whatsapp-conversation>
