--- a/src/app/components/presentation-of-services/presentation-of-services.component.css
+++ b/src/app/components/presentation-of-services/presentation-of-services.component.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   color: #fff;
-  padding-top: 50px;
+  padding-bottom: 100px;
 }
 
 #services {
@@ -18,7 +18,7 @@
 }
 
 #services img {
-  width: 350px;
+  width: 300px;
 }
 
 h2 {
@@ -61,6 +61,17 @@ h2 {
   animation-delay: 4s;
 }
 
+@media (max-width: 800px) {
+  #services {
+    width: 96%;
+    height: 96%;
+    padding: 0px 0px 0px 0px;
+  }
+  #services img {
+    width: 280px;
+  }
+}
+
 @keyframes randomAnimation {
   0% {
     transform: translateY(0);
@@ -73,16 +84,5 @@ h2 {
   100% {
     transform: translateY(0);
     opacity: 0;
-  }
-}
-
-@media (max-width: 800px) {
-  #services {
-    width: 96%;
-    height: 96%;
-    padding: 0px 0px 0px 0px;
-  }
-  #services img {
-    width: 280px;
   }
 }
