adjustment of hours and services components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <app-navigation></app-navigation>
 <app-home></app-home>
 <app-about></app-about>
-<app-opening-hours></app-opening-hours>
-<app-presentation-of-services></app-presentation-of-services>
+<div class="container-hours-services">
+  <app-opening-hours></app-opening-hours>
+  <app-presentation-of-services></app-presentation-of-services>
+</div>
 <app-work-space></app-work-space>
 
 <app-whatsapp-conversation></app-whatsapp-conversation>
