--- a/src/app/components/presentation-of-services/presentation-of-services.component.html
+++ b/src/app/components/presentation-of-services/presentation-of-services.component.html
@@ -14,6 +14,8 @@
       </div>
     </div>
 
-    <img src="../../../assets/imgServices.png" alt="Mulher se cuidando" />
+    <div>
+      <img src="../../../assets/imgServices.png" alt="Mulher se cuidando" />
+    </div>
   </div>
 </section>
