--- a/src/app/components/opening-hours/opening-hours.component.css
+++ b/src/app/components/opening-hours/opening-hours.component.css
@@ -1,40 +1,35 @@
 .container {
+  width: 40vw;
+  height: 680px;
+
   background-color: #439494;
-  display: flex;
-  justify-content: center;
-  color: #0e6150;
+  color: #fff;
   padding-bottom: 100px;
 }
 
 .container-content {
-  background-color: #ffffff93;
-
-  padding: 40px 160px 40px 160px;
-  border-radius: 20px;
-}
-.container-content div {
+  height: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+
+  background-color: #ffffff93;
+  border-radius: 20px;
 }
 
 h2 {
   text-align: center;
-  color: #857c7c;
-  padding: 15px;
+  padding: 30px;
   font-weight: bold;
 }
 
 table {
   border-collapse: collapse;
-  margin: auto;
 }
 
 th,
 td {
-  padding: 10px;
-  text-align: center;
-  width: 120px;
+  padding: 25px;
 }
 
 th {
@@ -42,21 +37,23 @@ th {
 }
 
 tr:nth-child(even) {
-  background-color: #dcebe6;
+  background-color: #4ee2b1;
 }
 
-tr:hover:nth-child(1n + 2) {
-  background-color: #085f63;
-  color: #fff;
+@media (max-width: 1500px) {
+  .container {
+    width: 60vw;
+  }
+}
+
+@media (max-width: 1000px) {
+  .container {
+    width: 70vw;
+  }
 }
 
 @media (max-width: 800px) {
-  .container-content {
-    width: 96%;
-    height: 96%;
-    padding: 0px 0px 30px 0px;
-  }
-  h2 {
-    padding: 15px;
+  .container {
+    width: 96vw;
   }
 }
