--- a/src/app/components/presentation-of-services/presentation-of-services.component.css
+++ b/src/app/components/presentation-of-services/presentation-of-services.component.css
@@ -1,28 +1,32 @@
 .container {
+  width: 40vw;
+  height: 680px;
+
   background-color: #439494;
-  display: flex;
-  justify-content: center;
   color: #fff;
   padding-bottom: 100px;
 }
 
 #services {
-  background-color: #0e6150;
-  padding: 40px 110px 0px 110px;
-  border-radius: 20px;
-
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-end;
+
+  background-color: #0e6150;
+  border-radius: 20px;
 }
 
+#services div {
+  align-items: flex-end;
+  overflow: hidden;
+}
 #services img {
   width: 300px;
 }
 
 h2 {
-  padding: 20px;
+  padding: 30px;
   font-weight: bold;
 }
 
@@ -34,8 +38,8 @@ h2 {
 }
 
 .name-of-services {
-  font-size: 20px;
-  padding: 20px;
+  font-size: 25px;
+  padding: 25px;
   opacity: 0;
   animation-name: randomAnimation;
   animation-duration: 4s;
@@ -61,14 +65,33 @@ h2 {
   animation-delay: 4s;
 }
 
+@media (max-width: 1500px) {
+  .container {
+    width: 60vw;
+  }
+}
+
+@media (max-width: 1000px) {
+  .container {
+    width: 70vw;
+  }
+}
+
 @media (max-width: 800px) {
-  #services {
-    width: 96%;
-    height: 96%;
-    padding: 0px 0px 0px 0px;
+  .container {
+    width: 96vw;
   }
   #services img {
-    width: 280px;
+    width: 290px;
+  }
+  .name-of-services {
+    font-size: 20px;
+    padding: 25px;
+  }
+}
+@media (max-width: 400px) {
+  #services img {
+    width: 270px;
   }
 }
 
@@ -78,7 +101,7 @@ h2 {
     opacity: 0;
   }
   50% {
-    transform: translateY(-20px);
+    transform: translateY(+10px);
     opacity: 1;
   }
   100% {
