adjust the presentation of the environment

--- a/src/app/components/work-space/work-space.component.html
+++ b/src/app/components/work-space/work-space.component.html
@@ -7,19 +7,29 @@
         alt="recepção do local"
         class="item"
       />
+      <img
+        src="../../../assets/work-space-img/sala2..jpg"
+        alt="recepção do local"
+        class="item"
+      />
 
       <img
-        src="../../../assets/work-space-img/recepção.jpg"
+        src="../../../assets/work-space-img/sala3....jpg"
         alt="recepção do local"
         class="item"
       />
       <img
-        src="../../../assets/work-space-img/recepção.jpg"
+        src="../../../assets/work-space-img/sala 4.jpg"
         alt="recepção do local"
         class="item"
       />
       <img
-        src="../../../assets/work-space-img/recepção.jpg"
+        src="../../../assets/work-space-img/sala 1+.jpg"
+        alt="recepção do local"
+        class="item"
+      />
+      <img
+        src="../../../assets/work-space-img/fachada.jpg"
         alt="recepção do local"
         class="item"
       />
