--- a/src/app/components/work-space/work-space.component.css
+++ b/src/app/components/work-space/work-space.component.css
@@ -21,12 +21,12 @@ h2 {
 
 .carrossel-container {
   display: flex;
-  width: max-content;
-  animation: carrossel-animation 20s linear infinite;
+  max-width: max-content;
+  animation: carrossel-animation 25s linear infinite;
 }
 
 .item {
-  width: 900px;
+  width: 700px;
   height: 500px;
   margin-right: 1px;
 }
@@ -34,9 +34,6 @@ h2 {
 @media (max-width: 1050px) {
   .carrossel {
     width: 800px;
-  }
-  .item {
-    width: 700px;
   }
 }
 
@@ -46,12 +43,30 @@ h2 {
     height: 400px;
   }
   .item {
-    width: 90%;
+    width: 600px;
     height: 400px;
   }
 }
 
 @keyframes carrossel-animation {
+  0% {
+    transform: translateX(0);
+  }
+  30% {
+    transform: translateX(-787px);
+  }
+  60% {
+    transform: translateX(-1575px);
+  }
+  90% {
+    transform: translateX(-3150px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+/* @keyframes carrossel-animation {
   0% {
     transform: translateX(0);
   }
@@ -70,4 +85,4 @@ h2 {
   100% {
     transform: translateX(0);
   }
-}
+} */
