--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -131,6 +131,21 @@ button:focus::after {
   display: none;
 }
 
+@media (min-width: 1400px) {
+  .wrap {
+    padding-top: 70px;
+  }
+  .button {
+    width: 300px;
+    font-family: "Nunito", sans-serif;
+    font-size: 20px;
+    padding: 15px;
+  }
+
+  button::before {
+    min-width: calc(300px + 8px);
+  }
+}
 @keyframes ring {
   0% {
     width: 20px;
