created location component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,5 @@
   <app-presentation-of-services></app-presentation-of-services>
 </div>
 <app-work-space></app-work-space>
-
+<app-location></app-location>
 <app-whatsapp-conversation></app-whatsapp-conversation>
