created footer component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,6 @@
 </div>
 <app-work-space></app-work-space>
 <app-location></app-location>
+
+<app-footer></app-footer>
 <app-whatsapp-conversation></app-whatsapp-conversation>
