--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,7 +10,13 @@
     </div>
 
     <div class="wrap">
-      <button class="button">Agende seu horário</button>
+      <a
+        href="http://api.whatsapp.com/send?1=pt_BR&phone=5551995920102&text=Olá,%20gostaria%20de%20agendar%20o%20meu%20horário"
+        target="_blank"
+        class="button"
+      >
+        Agende seu horário
+      </a>
     </div>
   </section>
   <section class="description-container">
