--- a/src/app/components/opening-hours/opening-hours.component.html
+++ b/src/app/components/opening-hours/opening-hours.component.html
@@ -1,7 +1,7 @@
 <section class="container">
   <div class="container-content" id="opening-hours">
     <div>
-      <h2>HORÁRIO DE ATENDIMENTO</h2>
+      <h2>Horário de atendimento</h2>
     </div>
 
     <table>
