--- a/src/app/components/presentation-of-services/presentation-of-services.component.html
+++ b/src/app/components/presentation-of-services/presentation-of-services.component.html
@@ -1,10 +1,10 @@
 <section class="container">
   <div id="services">
-    <h2>OFERECEMOS SEVIÇOS DE:</h2>
+    <h2>Serviços</h2>
     <div class="container-name-of-services">
       <div>
         <p class="name-of-services">Embelezamento Facial</p>
-        <p class="name-of-services">Epilação Corporal</p>
+        <p class="name-of-services">Depilação Corporal</p>
         <p class="name-of-services">Massoterapia</p>
       </div>
       <div>
