--- a/src/app/components/work-space/work-space.component.html
+++ b/src/app/components/work-space/work-space.component.html
@@ -1,5 +1,5 @@
 <section id="environment">
-  <h2>CONHEÇA O NOSSO AMBIENTE</h2>
+  <h2>CONHEÇA NOSSO AMBIENTE</h2>
   <div class="carrossel">
     <div class="carrossel-container">
       <img
