adjust professional images

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -39,7 +39,7 @@
       <div class="professional-presentation">
         <img
           class="professionals"
-          src="../../../assets/Morgana.jpg"
+          src="../../../assets/professionals-img/Morgana.jpg"
           alt="Morgana"
         />
         <div>
@@ -58,7 +58,7 @@
       <div class="professional-presentation">
         <img
           class="professionals"
-          src="../../../assets/Fran-Oliveira.jpg"
+          src="../../../assets/professionals-img/Fran-Oliveira.jpg"
           alt="Fran Oliveira"
         />
         <div>
@@ -79,7 +79,7 @@
       <div class="professional-presentation">
         <img
           class="professionals"
-          src="../../../assets/Carine.jpg"
+          src="../../../assets/professionals-img/Carine.jpg"
           alt="Carine"
         />
         <div>
@@ -99,8 +99,8 @@
       <div class="professional-presentation">
         <img
           class="professionals"
-          src="../../../assets/Carine.jpg"
-          alt="Carine"
+          src="../../../assets/professionals-img/Liane.jpg"
+          alt="Liane"
         />
         <div>
           <h3>LIANE</h3>
@@ -120,7 +120,7 @@
       <div class="professional-presentation">
         <img
           class="professionals"
-          src="../../../assets/Carine.jpg"
+          src="../../../assets/professionals-img/Carine.jpg"
           alt="Carine"
         />
         <div>
@@ -142,8 +142,8 @@
       <div class="professional-presentation">
         <img
           class="professionals"
-          src="../../../assets/Carine.jpg"
-          alt="Carine"
+          src="../../../assets/professionals-img/kaisy.jpg"
+          alt="Kaisy"
         />
         <div>
           <h3>KAISY</h3>
