professionals summary adjustment and side scroll

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -127,14 +127,14 @@
           <h3>DEISE</h3>
           <p>
             Deise Silveira Fontoura é uma profissional especializada em
-            massagem, oferecendo serviços de massagem relaxante, drenagem
-            linfática, massagem estética e massagem terapêutica. Com sua
-            habilidade e conhecimento, ela busca proporcionar bem-estar, alívio
-            do estresse, melhora da circulação, tratamento estético e
-            terapêutico através das técnicas de massagem. Sua dedicação em
-            cuidar dos clientes e oferecer resultados satisfatórios torna-a uma
-            escolha confiável para quem busca relaxamento e cuidados
-            personalizados.
+            diferentes técnicas de massagem, incluindo massagem relaxante,
+            drenagem linfática, massagem estética e massagem terapêutica. Com
+            suas habilidades e conhecimentos, ela visa proporcionar bem-estar,
+            alívio do estresse, melhora da circulação, além de tratamento
+            estético e terapêutico por meio de suas sessões de massagem. Sua
+            dedicação em cuidar dos clientes e fornecer resultados satisfatórios
+            faz dela uma escolha confiável para aqueles que buscam relaxamento e
+            cuidados personalizados.
           </p>
         </div>
       </div>
@@ -148,15 +148,15 @@
         <div>
           <h3>KAISY</h3>
           <p>
-            Kaisy Leopoldes é uma terapeuta integrativa e especialista em saúde
-            capilar, com mais de 10 anos de experiência como cabeleireira. Ela
-            se especializou em terapia capilar integrativa para tratar as
-            verdadeiras causas dos problemas capilares, e também possui
-            conhecimentos em técnicas como Barras de Access e Constelação
-            Sistêmica Familiar. Kaisy é reconhecida por seus cortes, tratamentos
-            e mechas, e seu foco está em abordar os aspectos emocionais e
-            energéticos relacionados aos problemas capilares, oferecendo
-            tratamentos personalizados e holísticos para seus clientes.
+            Kaisy Leopoldes é uma profissional experiente com mais de 10 anos de
+            experiência, especializada em terapia capilar integrativa. Ela se
+            dedica a tratar as verdadeiras causas dos problemas capilares,
+            utilizando técnicas como Barras de Access e Constelação Sistêmica
+            Familiar. Além de seus talentos em cortes, tratamentos e mechas,
+            Kaisy se destaca por abordar os aspectos emocionais e energéticos
+            relacionados aos problemas capilares. Ela oferece tratamentos
+            personalizados e holísticos, buscando soluções completas para seus
+            clientes.
           </p>
         </div>
       </div>
