adjustment in the presentation of professionals and change of image

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -13,8 +13,9 @@
         disponível para remoção de pelos indesejados. A naturopatia é um campo
         da medicina alternativa que se concentra no uso de tratamentos naturais
         e abordagens holísticas para promover a saúde e o bem-estar. A terapia
-        capilar integrativa é um serviço especializado que visa melhorar a saúde
-        e a aparência do couro cabeludo e cabelo.
+        capilar integrativa é um serviço especializado em saúde do couro
+        cabeludo e cabelo, que visa tratar o indivíduo de dentro para fora,
+        buscando a verdadeira origem de cada patologia.
       </p>
       <p>
         No Spaço7, os clientes podem desfrutar de um ambiente acolhedor e
@@ -120,8 +121,8 @@
       <div class="professional-presentation">
         <img
           class="professionals"
-          src="../../../assets/professionals-img/Carine.jpg"
-          alt="Carine"
+          src="../../../assets/professionals-img/Deise.jpg"
+          alt="Deise"
         />
         <div>
           <h3>DEISE</h3>
@@ -148,15 +149,16 @@
         <div>
           <h3>KAISY</h3>
           <p>
-            Kaisy Leopoldes é uma profissional experiente com mais de 10 anos de
-            experiência, especializada em terapia capilar integrativa. Ela se
-            dedica a tratar as verdadeiras causas dos problemas capilares,
-            utilizando técnicas como Barras de Access e Constelação Sistêmica
-            Familiar. Além de seus talentos em cortes, tratamentos e mechas,
-            Kaisy se destaca por abordar os aspectos emocionais e energéticos
-            relacionados aos problemas capilares. Ela oferece tratamentos
-            personalizados e holísticos, buscando soluções completas para seus
-            clientes.
+            Kaisy Leopoldes é uma terapeuta integrativa, especializada em saúde
+            capilar, com mais de 10 anos de experiência como cabeleireira. Ela
+            se especializou em terapia capilar integrativa, que visa tratar as
+            verdadeiras causas dos problemas capilares, em vez de apenas aplicar
+            protocolos para tratar os sinais e sintomas. Além disso, ela atua
+            como Terapeuta Alternativa, aplicando Barras de Access. Kaisy já é
+            reconhecida por seus cortes, tratamentos e mechas, e atualmente está
+            ampliando seu foco para o tratamento do indivíduo como um todo,
+            cuidando da mente, corpo e espírito. Ela oferece um tratamento
+            personalizado para cada cliente.
           </p>
         </div>
       </div>
